--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>óla, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit recusandae iusto, aspernatur nisi debitis omnis rem quaerat officiis corrupti quas, reiciendis voluptate, maxime accusamus deserunt reprehenderit libero possimus sit veniam!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et minus non architecto esse. Repellendus odio cumque ea illum dignissimos esse quos. Alias, incidunt tempora. Aliquam ratione harum dolores recusandae cupiditate.</p>
 </body>
 </html>
